--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,175 @@
-theme: jekyll-theme-cayman
+# The Site Configuration
+
+theme: jekyll-theme-chirpy
+
+# 界面语言，可选 zh-CN
+lang: zh-CN
+
+timezone: Asia/Shanghai
+
+# jekyll-seo-tag
+title: AkkunYoの博客
+tagline: 在路上，技术，博客
+description: >-
+  AkkunYoの博客，基于 Jekyll Chirpy 主题，记录学习与生活。
+
+url: "https://github.zkyml.com"
+
+github:
+  username: AkkunYo
+
+twitter:
+  username:
+
+social:
+  name: AkkunYo
+  email:
+  links:
+    - https://github.com/AkkunYo
+
+webmaster_verifications:
+  google:
+  bing:
+  baidu:
+
+analytics:
+  google:
+    id:
+  goatcounter:
+    id:
+  umami:
+    id:
+    domain:
+  matomo:
+    id:
+    domain:
+  cloudflare:
+    id:
+  fathom:
+    id:
+
+pageviews:
+  provider:
+
+theme_mode:
+
+cdn:
+
+avatar: /img/avater.20ecd860.jpg
+
+social_preview_image:
+
+toc: true
+
+comments:
+  provider:
+  disqus:
+    shortname:
+  utterances:
+    repo:
+    issue_term:
+  giscus:
+    repo:
+    repo_id:
+    category:
+    category_id:
+    mapping:
+    strict:
+    input_position:
+    lang:
+    reactions_enabled:
+
+assets:
+  self_host:
+    enabled:
+    env:
+
+pwa:
+  enabled: true
+  cache:
+    enabled: true
+    deny_paths:
+
+paginate: 10
+
+baseurl: ""
+
+# ------------ 以下选项一般无需修改 ------------------
+
+kramdown:
+  footnote_backlink: "&#8617;&#xfe0e;"
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    css_class: highlight
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
+
+collections:
+  tabs:
+    output: true
+    sort_by: order
+
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
+      comments: true
+      toc: true
+      permalink: /posts/:title/
+  - scope:
+      path: _drafts
+    values:
+      comments: false
+  - scope:
+      path: ""
+      type: tabs
+    values:
+      layout: page
+      permalink: /:title/
+
+sass:
+  style: compressed
+
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  profile: false
+  blanklines: false
+  ignore:
+    envs: [development]
+
+exclude:
+  - "*.gem"
+  - "*.gemspec"
+  - docs
+  - tools
+  - README.md
+  - LICENSE
+  - purgecss.js
+  - "*.config.js"
+  - "package*.json"
+  - .git
+  - .github
+  - .cursor
+  - squash_history.sh
+  - 压缩历史说明.md
+  - css
+  - js
+  - fonts
+  - 403.html
+  - 404.html
+
+jekyll-archives:
+  enabled: [categories, tags]
+  layouts:
+    category: category
+    tag: tag
+  permalinks:
+    tag: /tags/:name/
+    category: /categories/:name/
